<resources>
    <string name="app_name">Lab8ZPO</string>
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="ppm_method">
        <item>Benedict-Harris method</item>
        <item>Mifflin method</item>
    </string-array>

    <string name="height_hint">Type height (cm)</string>
    <string name="weight_hint">Type weight (kg)</string>
    <string name="date_pick">Pick birthday</string>
    <string name="calculate_string">Calculate</string>
    <string name="results_hint">Your PPM will be here</string>
    <string name="gender_choose">Choose gender:</string>
    <string name="method_choose">Choose PPM calculate method:</string>


</resources>
